Header + Hero section

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 
     <!-- CSS Loading -->
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/utility.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/responsive.css">
-
-    <!-- Font -->
-    
 
     <!-- JS Loading -->
     <script defer src="js/main.js"></script>
@@ -27,7 +25,6 @@
     <div id="app">
         <header id="header-container"></header>
         <main>
-            <section id="hero-container"></section>
             <section id="product-container"></section>
             <section id="stats-container"></section>
             <section id="table-container"></section>
