--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="GTG Perfumes - Exclusive fragrances for discerning customers. Shop our premium collection.">
+    <meta name="theme-color" content="#032E15">
     <title>GTG Perfumes</title>
+
+    <!-- Preload Critical Fonts -->
+    <link rel="preload" href="assets/fonts/Inter-VariableFont.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="assets/fonts/Oxanium-VariableFont.ttf" as="font" type="font/ttf" crossorigin>
 
     <!-- CSS Loading -->
     <link rel="stylesheet" href="css/base.css">
@@ -20,6 +28,7 @@
     <script defer src="js/product-options.js"></script>
     <script defer src="js/counter.js"></script>
 </head>
+
 <body>
 
     <div id="app">
@@ -33,4 +42,5 @@
     </div>
 
 </body>
+
 </html>
