--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- JS Loading -->
     <script defer src="js/main.js"></script>
+    <script defer src="js/animations.js"></script>
     <script defer src="js/header.js"></script>
     <script defer src="js/gallery.js"></script>
     <script defer src="js/product-options.js"></script>
