Add to cart link generation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script defer src="js/gallery.js"></script>
     <script defer src="js/product-options.js"></script>
     <script defer src="js/counter.js"></script>
+    <script defer src="js/cart.js"></script>
 </head>
 
 <body>
