--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="GTG Perfumes - Exclusive fragrances for discerning customers. Shop our premium collection.">
     <meta name="theme-color" content="#032E15">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>GTG Perfumes</title>
 
     <!-- CSS Loading -->
